force-app/main/default/objects/SFDC_Request__c/SFDC_Request__c.object-meta.xml
<CustomObject>
    <description>Request related to a Project</description>
    <label>Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>