force-app/main/default/objects/SFDC_Request__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3PL</fullName>
            </value>
            <value>
                <fullName>Account Plans</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>atTask/UES</fullName>
            </value>
            <value>
                <fullName>BuddyMedia</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Competitors</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Data.com</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Existing Users</fullName>
            </value>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>Hoovers</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Licenses</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>New Functionality</fullName>
            </value>
            <value>
                <fullName>New Users</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outlook Connector</fullName>
            </value>
            <value>
                <fullName>Pipeline Reviews</fullName>
            </value>
            <value>
                <fullName>Primary Sales Rep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>