force-app/main/default/objects/SFDC_Request__c/fields/Bluewolf_Services__c.field-meta.xml
<CustomField>
    <fullName>Bluewolf_Services__c</fullName>
    <inlineHelpText>Which efforts will be required from BW for this project?</inlineHelpText>
    <label>BW Involvement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Project Management (Services)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>