force-app/main/default/objects/SFDC_Request__c/fields/Business_Function_Impact__c.field-meta.xml
<CustomField>
    <fullName>Business_Function_Impact__c</fullName>
    <label>Business Function Impact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Category Management</fullName>
            </value>
            <value>
                <fullName>Cost Maintenance</fullName>
            </value>
            <value>
                <fullName>Credit and Collections</fullName>
            </value>
            <value>
                <fullName>Customer Rebates</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>E-Business</fullName>
            </value>
            <value>
                <fullName>Environmental Health and Safety (EHS)</fullName>
            </value>
            <value>
                <fullName>Equipment Parts and Services</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Kitting</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>National Accounts</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Inventory Management (PIM)</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
            <value>
                <fullName>Sourcing</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Tax Exempt Accounts (TEA)</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Vendor Rebates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>