force-app/main/default/objects/SFDC_Request__c/fields/BW__c.field-meta.xml
<CustomField>
    <fullName>BW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if BW is involved.</description>
    <inlineHelpText>Check if BW is involved.</inlineHelpText>
    <label>BW</label>
    <type>Checkbox</type>
</CustomField>