force-app/main/default/objects/SFDC_Request__c/fields/BW_Actual_Hrs__c.field-meta.xml
<CustomField>
    <fullName>BW_Actual_Hrs__c</fullName>
    <inlineHelpText>Actual hours as logged by BW on associated issues.</inlineHelpText>
    <label>BW Actual Hrs</label>
    <summarizedField>Workstream__c.Actual_BW_Hours_Spent__c</summarizedField>
    <summaryForeignKey>Workstream__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>