force-app/main/default/objects/SFDC_Request__c/fields/BW_Exp_Hrs_Spent__c.field-meta.xml
<CustomField>
    <fullName>BW_Exp_Hrs_Spent__c</fullName>
    <formula>Percent_Complete__c *  BW_Max_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>%Complete * Max BW Hrs = how many hours should have been spent by this point in the project</inlineHelpText>
    <label>BW Exp Hrs Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>