force-app/main/default/objects/SFDC_Request__c/fields/BW_Hrs_To_Go__c.field-meta.xml
<CustomField>
    <fullName>BW_Hrs_To_Go__c</fullName>
    <formula>BW_Max_Hrs__c - BW_Actual_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>BW Max Hrs - BW Actual Hrs</inlineHelpText>
    <label>BW Hrs To Go</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>