force-app/main/default/objects/SFDC_Request__c/fields/BW_Max_Hrs__c.field-meta.xml
<CustomField>
    <fullName>BW_Max_Hrs__c</fullName>
    <inlineHelpText>The Max # of hours BW is expected to spend on this project, based on the highest estimate provided.</inlineHelpText>
    <label>BW Max Hrs</label>
    <summarizedField>Workstream__c.BW_Max_Hrs__c</summarizedField>
    <summaryForeignKey>Workstream__c.Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>