force-app/main/default/objects/SFDC_Request__c/fields/Canceled_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Rejected_Reason__c</fullName>
    <label>Canceled/Rejected Reason</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>