force-app/main/default/objects/SFDC_Request__c/fields/CER__c.field-meta.xml
<CustomField>
    <fullName>CER__c</fullName>
    <label>CER #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>