force-app/main/default/objects/SFDC_Request__c/fields/CER_Required__c.field-meta.xml
<CustomField>
    <fullName>CER_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the level of effort is high enough to require a separate Capital Expenditure Request.</inlineHelpText>
    <label>CER Required?</label>
    <type>Checkbox</type>
</CustomField>