force-app/main/default/objects/SFDC_Request__c/fields/Config_in_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Config_in_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Config in Sandbox?</label>
    <type>Checkbox</type>
</CustomField>