force-app/main/default/objects/SFDC_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>US + CAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>