force-app/main/default/objects/SFDC_Request__c/fields/Date_Email_sent_to_SD__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_sent_to_SD__c</fullName>
    <label>Date Email sent to SD+</label>
    <type>DateTime</type>
</CustomField>