force-app/main/default/objects/SFDC_Request__c/fields/date_end__c.field-meta.xml
<CustomField>
    <fullName>date_end__c</fullName>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>