force-app/main/default/objects/SFDC_Request__c/fields/Date_of_Sunsetting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Sunsetting__c</fullName>
    <inlineHelpText>Includes the date the functionality was sunset and no longer in use.</inlineHelpText>
    <label>Date of Sunsetting</label>
    <type>Date</type>
</CustomField>