force-app/main/default/objects/SFDC_Request__c/fields/date_release__c.field-meta.xml
<CustomField>
    <fullName>date_release__c</fullName>
    <label>Actual Deployment Date</label>
    <type>Date</type>
</CustomField>