force-app/main/default/objects/SFDC_Request__c/fields/date_start__c.field-meta.xml
<CustomField>
    <fullName>date_start__c</fullName>
    <inlineHelpText>Choose the date of the next Steering Committee meeting for all new requests.  Meetings are the last Wed of each month.The project will begin after the meeting if it is approved and moved to the top of the queue as highest priority.</inlineHelpText>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>