force-app/main/default/objects/SFDC_Request__c/fields/Design_Documented__c.field-meta.xml
<CustomField>
    <fullName>Design_Documented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Documented?</label>
    <type>Checkbox</type>
</CustomField>