force-app/main/default/objects/SFDC_Request__c/fields/Dev_Testing_Environment__c.field-meta.xml
<CustomField>
    <fullName>Dev_Testing_Environment__c</fullName>
    <inlineHelpText>Which Sandbox is the develop or testing occurring in?</inlineHelpText>
    <label>Dev/Testing Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1216dev</fullName>
            </value>
            <value>
                <fullName>3PLopp</fullName>
            </value>
            <value>
                <fullName>AL</fullName>
            </value>
            <value>
                <fullName>ALnew</fullName>
            </value>
            <value>
                <fullName>ANI</fullName>
            </value>
            <value>
                <fullName>BGreenSF</fullName>
            </value>
            <value>
                <fullName>bluelight</fullName>
            </value>
            <value>
                <fullName>bluewolf</fullName>
            </value>
            <value>
                <fullName>bwstaging</fullName>
            </value>
            <value>
                <fullName>corrugated</fullName>
            </value>
            <value>
                <fullName>creditchec</fullName>
            </value>
            <value>
                <fullName>csroadmap</fullName>
            </value>
            <value>
                <fullName>deploystg</fullName>
            </value>
            <value>
                <fullName>GTRI</fullName>
            </value>
            <value>
                <fullName>JR</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>Michelle</fullName>
            </value>
            <value>
                <fullName>MS17</fullName>
            </value>
            <value>
                <fullName>NAMauto</fullName>
            </value>
            <value>
                <fullName>NB</fullName>
            </value>
            <value>
                <fullName>objdelete</fullName>
            </value>
            <value>
                <fullName>pdfnames</fullName>
            </value>
            <value>
                <fullName>SalesIQ</fullName>
            </value>
            <value>
                <fullName>SB17</fullName>
            </value>
            <value>
                <fullName>STMQuote</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Zilliant</fullName>
            </value>
            <value>
                <fullName>zillntstge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>