force-app/main/default/objects/SFDC_Request__c/fields/DMS_Project__c.field-meta.xml
<CustomField>
    <fullName>DMS_Project__c</fullName>
    <label>Jira Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>