force-app/main/default/objects/SFDC_Request__c/fields/DMS_Project_Link__c.field-meta.xml
<CustomField>
    <fullName>DMS_Project_Link__c</fullName>
    <label>DMS Project Link</label>
    <type>Url</type>
</CustomField>