force-app/main/default/objects/SFDC_Request__c/fields/Expected_Bluewolf_OS_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expected_Bluewolf_OS_Hours__c</fullName>
    <label>Expected Bluewolf OS Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>