force-app/main/default/objects/SFDC_Request__c/fields/expected_internal_config_hours__c.field-meta.xml
<CustomField>
    <fullName>expected_internal_config_hours__c</fullName>
    <label>Expected Internal Config Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>