force-app/main/default/objects/SFDC_Request__c/fields/Expected_Results__c.field-meta.xml
<CustomField>
    <fullName>Expected_Results__c</fullName>
    <label>Expected Results</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>