force-app/main/default/objects/SFDC_Request__c/fields/Expected_total_hours__c.field-meta.xml
<CustomField>
    <fullName>Expected_total_hours__c</fullName>
    <formula>Expected_BA_Hours__c + Expected_Bluewolf_OS_Hours__c + Expected_Comm_Support_Hours__c + expected_internal_config_hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Total Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>