force-app/main/default/objects/SFDC_Request__c/fields/Final_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Final_Request_Type__c</fullName>
    <description>If the Request Type changes during the life of the Request, this is the final disposition.</description>
    <inlineHelpText>If the Request Type should be updated during the life of the Request, enter the final request type here.</inlineHelpText>
    <label>Final Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question/Research</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Bug/Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>