force-app/main/default/objects/SFDC_Request__c/fields/Groomed__c.field-meta.xml
<CustomField>
    <fullName>Groomed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Groomed</label>
    <type>Checkbox</type>
</CustomField>