force-app/main/default/objects/SFDC_Request__c/fields/Historical_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Historical_Status_Notes__c</fullName>
    <inlineHelpText>Add the previous status notes to the top of the comments here.</inlineHelpText>
    <label>Historical Status Notes</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>