force-app/main/default/objects/SFDC_Request__c/fields/Impacts_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Impacts_Salesforce__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box if the request will impact Salesforce.</inlineHelpText>
    <label>Impacts Salesforce</label>
    <type>Checkbox</type>
</CustomField>