force-app/main/default/objects/SFDC_Request__c/fields/Implemented_Business_Process__c.field-meta.xml
<CustomField>
    <fullName>Implemented_Business_Process__c</fullName>
    <description>What business process was decided upon and implemented.  Could be different from original request due to discovery, technical limitations, priority changes, reduced timelines, etc.</description>
    <inlineHelpText>What business process was decided upon and implemented.  Could be different from original request due to discovery, technical limitations, priority changes, reduced timelines, etc.</inlineHelpText>
    <label>Implemented Business Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>