force-app/main/default/objects/SFDC_Request__c/fields/Internal_SF_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_SF_Team_Comments__c</fullName>
    <inlineHelpText>Not included in weekly report.  Use to note road blocks, concerns, and any issues with this project.</inlineHelpText>
    <label>Internal SF Team Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>