force-app/main/default/objects/SFDC_Request__c/fields/Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Effort__c</fullName>
    <inlineHelpText>Compared to other projects, what&apos;s the level of effort for this one?  High Effort = 10, Low Effort = 1</inlineHelpText>
    <label>Level of Effort</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>