force-app/main/default/objects/SFDC_Request__c/fields/Next_Steps_Key_Dates__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_Key_Dates__c</fullName>
    <inlineHelpText>Enter key dates here</inlineHelpText>
    <label>Next Steps &amp; Key Dates</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>