force-app/main/default/objects/SFDC_Request__c/fields/Parent_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>May be used to group similar or duplicate requests</description>
    <label>Parent Request</label>
    <referenceTo>SFDC_Request__c</referenceTo>
    <relationshipLabel>Related Requests</relationshipLabel>
    <relationshipName>Related_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>