force-app/main/default/objects/SFDC_Request__c/fields/Planned_Activities_Next_Period__c.field-meta.xml
<CustomField>
    <fullName>Planned_Activities_Next_Period__c</fullName>
    <label>Planned Activities Next Period</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>