force-app/main/default/objects/SFDC_Request__c/fields/Planned_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Deployment_Date__c</fullName>
    <label>Planned Deployment Date</label>
    <type>Date</type>
</CustomField>