force-app/main/default/objects/SFDC_Request__c/fields/Post_Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Post_Deployment_Steps__c</fullName>
    <description>Any steps, actions or cleanup needed after deployment to production.</description>
    <inlineHelpText>Any steps, actions or cleanup needed after deployment to production.</inlineHelpText>
    <label>Post-Deployment Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>