force-app/main/default/objects/SFDC_Request__c/fields/Potential_Business_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Potential_Business_Benefit__c</fullName>
    <label>Potential Business Benefit</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>