force-app/main/default/objects/SFDC_Request__c/fields/Pre_Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deployment_Steps__c</fullName>
    <description>Any steps, actions or preparation needed prior deployment.</description>
    <inlineHelpText>Any steps, actions or preparation needed prior deployment.</inlineHelpText>
    <label>Pre-Deployment Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>