force-app/main/default/objects/SFDC_Request__c/fields/Primary_Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Business Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Primary_Business_Contact_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>