force-app/main/default/objects/SFDC_Request__c/fields/Primary_Business_Function_Impact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Business_Function_Impact__c</fullName>
    <label>Primary Business Function Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Business_Function_Impact2</valueSetName>
    </valueSet>
</CustomField>