force-app/main/default/objects/SFDC_Request__c/fields/Primary_Project_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Project_Contact_Email__c</fullName>
    <label>Primary Business Contact Email</label>
    <type>Email</type>
</CustomField>