force-app/main/default/objects/SFDC_Request__c/fields/Project_Business_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Project_Business_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Business Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>