force-app/main/default/objects/SFDC_Request__c/fields/Project_Communications_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Communications_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Communications Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>