force-app/main/default/objects/SFDC_Request__c/fields/Project_Configuration_Lead__c.field-meta.xml
<CustomField>
    <fullName>Project_Configuration_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Configuration Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>