force-app/main/default/objects/SFDC_Request__c/fields/Project_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Link__c</fullName>
    <description>Link to project plan in Smartsheet or other URL link</description>
    <inlineHelpText>Input link to the Smartsheet or other web-based project plan</inlineHelpText>
    <label>Project Plan Link</label>
    <type>Url</type>
</CustomField>