force-app/main/default/objects/SFDC_Request__c/fields/Ready_for_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Deployment?</label>
    <type>Checkbox</type>
</CustomField>