force-app/main/default/objects/SFDC_Request__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>