force-app/main/default/objects/SFDC_Request__c/fields/Request_Detail__c.field-meta.xml
<CustomField>
    <fullName>Request_Detail__c</fullName>
    <label>Request Detail</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>