force-app/main/default/objects/SFDC_Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <displayFormat>R-{YY}-{0}</displayFormat>
    <inlineHelpText>Auto-number for reference purposes.  Format is R - YY - count.</inlineHelpText>
    <label>Request Number</label>
    <type>AutoNumber</type>
</CustomField>