force-app/main/default/objects/SFDC_Request__c/fields/request_owner_user__c.field-meta.xml
<CustomField>
    <fullName>request_owner_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N700000024dAUEAY</relationshipName>
    <type>Lookup</type>
</CustomField>