force-app/main/default/objects/SFDC_Request__c/fields/request_priority__c.field-meta.xml
<CustomField>
    <fullName>request_priority__c</fullName>
    <label>Request Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
            <value>
                <fullName>4 - Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>