force-app/main/default/objects/SFDC_Request__c/fields/Request_Scale__c.field-meta.xml
<CustomField>
    <fullName>Request_Scale__c</fullName>
    <inlineHelpText>Major Project - Requires integration, custom code, potential repercussions 
Minor Project - Basic Functionality, Doesn&apos;t affect existing config
Tweak Existing - Make minor field, report, workflow changes
New User Group - Requirements, config, setup</inlineHelpText>
    <label>Request Scale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Major Project</fullName>
            </value>
            <value>
                <fullName>Minor Project</fullName>
            </value>
            <value>
                <fullName>Tweak Existing</fullName>
            </value>
            <value>
                <fullName>Report/Dashboard</fullName>
            </value>
            <value>
                <fullName>Process Development/Support</fullName>
            </value>
            <value>
                <fullName>New User Group - Low Effort</fullName>
            </value>
            <value>
                <fullName>New User Group - High Effort</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Reorg</fullName>
            </value>
            <value>
                <fullName>Ongoing Enhancements</fullName>
            </value>
            <value>
                <fullName>Merge Processes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>